--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -11,10 +11,10 @@
   --logo-size: 30px;
   --nav-background-color: #f4f4f4;
   --nav-font-color: #333;
-  --hover-color: #2a9d8f;
   --border-style: 1px solid #66dbc6;
   --headertop-height: 60px;
-  --hover-color: #a79151; 
+  --hover-color: #2a9d8f;
+  --hover-color-dark-mode: #e9c46a; 
 }
 
 /* General styles */
