ビュー編集

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -114,18 +114,17 @@
   cursor: default;
 }
 
-
 /* Category nav */
 .category-nav {
-  width: 100%;
   background-color: var(--nav-background-color);
+  padding: 10px 0;
+  opacity: 1;
 }
 
 .category-nav ul {
   display: flex;
   justify-content: flex-start;
   list-style: none;
-  padding: 10px;
 }
 
 .category-nav li {
@@ -133,7 +132,7 @@
 }
 
 .category-nav a {
-  color: var(--font-color);
+  color: var(--nav-font-color);
   text-decoration: none;
   transition: color 0.2s;
   font-size: 15px;
@@ -142,4 +141,5 @@
 .category-nav a:hover {
   color: var(--hover-color);
 }
+
 
