--- a/app/assets/stylesheets/darkmode.scss
+++ b/app/assets/stylesheets/darkmode.scss
@@ -22,7 +22,7 @@ body.dark-mode {
   
   body.dark-mode .form-control {
     border-color: rgba(87, 81, 81, 0.5);
-    background-color: rgba(87, 81, 81, 0.5);
+    background-color: rgb(77, 64, 64);
     color: white;
   
   }
@@ -32,7 +32,7 @@ body.dark-mode {
   body.dark-mode .form-control:hover {
     border-color: var(--secondary-color);
     box-shadow: 0 0 0 3px rgba(233, 196, 106, 0.25);
-    background-color: rgba(60, 60, 60, 0.9);
+    background-color: rgba(60, 60, 60, 1);
   }
 
   body.dark-mode .form-control:focus {
@@ -82,6 +82,7 @@ body.dark-mode {
   
   body.dark-mode .category-nav {
     background-color: var(--input-background-color-dark-mode);
+    opacity: 1;
   }
   
   body.dark-mode .category-nav a:hover {
@@ -146,4 +147,8 @@ body.dark-mode {
 
     body.dark-mode .form-title-link li a:hover {
     color: var(--hover-color);
+  }
+
+  body.dark-mode .prompt-form-area {
+    background-color: var(--background-color-dark-mode);
   }
