--- a/app/assets/stylesheets/_plan_input.scss
+++ b/app/assets/stylesheets/_plan_input.scss
@@ -1,5 +1,16 @@
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 
 .plan-input {
+    animation: slideInFromTop 0.8s ease-out;
     flex-shrink: 0;
     width: 400px;
     padding: 30px;
