スタイル変更

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -19,8 +19,15 @@
 }
 
 .header__logo {
+  display: block;
   font-size: 24px; 
   font-weight: bold;
+  white-space: nowrap;
+}
+
+.header__logo a {
+  color: var(--font-color);
+  text-decoration: none;
 }
 
 .header__search, .header_nav {
@@ -85,7 +92,7 @@
   color: var(--hover-color);
 }
 
-.header a {
+.header__nav a {
   color: var(--font-color);
   text-decoration: none;
 }
@@ -100,6 +107,7 @@
   display: grid;
   place-items: center;
   cursor: pointer;
+  width: 120px;
 }
 
 #dark-mode-toggle:hover {
@@ -125,6 +133,7 @@
   display: flex;
   justify-content: flex-start;
   list-style: none;
+  padding-left: 10px;
 }
 
 .category-nav li {
