--- a/app/assets/stylesheets/_generated_plan.scss
+++ b/app/assets/stylesheets/_generated_plan.scss
@@ -1,6 +1,7 @@
 .generated_plan_container {
     padding: 30px;
     width: 50%;
+    min-width: 500px;
     border-right: var(--border-style);
     font-size: 16px;
     display: flex;
