--- a/app/assets/stylesheets/auth.scss
+++ b/app/assets/stylesheets/auth.scss
@@ -10,10 +10,12 @@
   width: 280px;
   height: 300px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .field {
-    margin-bottom: 20px;
+    margin-bottom: 16px;
     
   }
   
@@ -96,4 +98,15 @@
   .error-message {
     color: rgb(118, 158, 7);
     font-size: 13px;
+  }
+
+  .password-reset {
+    margin-top: 16px;
+    text-align: center;
+  }
+
+  .password-reset a {
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
   }
