--- a/app/assets/stylesheets/darkmode.scss
+++ b/app/assets/stylesheets/darkmode.scss
@@ -76,7 +76,7 @@ body.dark-mode {
     color: var(--font-color-dark-mode);
   }
 
-  body.dark-mode .header__nav a:hover {
+  body.dark-mode .header-nav a:hover {
     color: var(--hover-color-dark-mode);
   }
   
