--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -1,24 +1,21 @@
 <main class="container_about">
     <section class="feature">
-        <div class="feature_item ">
+        <div class="feature_item">
             <div class="upper_left">
-                <h3>旅行プランを作成</h3>
-                <p>目的地を選んでプランを作成しましょう。</p>
+                <h3><%= t(:create_travel_plan_title) %></h3>
+                <p><%= t(:create_travel_plan_description) %></p>
             </div>
         </div>
-    
-        <div class="feature_item ">
+        <div class="feature_item">
             <div class="middle_right">
-                <h3>自分だけのオリジナルプランを作成</h3>
-                <p>詳細な希望を選択して、自分だけのオリジナルプランを作成できます。</p>
+                <h3><%= t(:create_customized_plan_title) %></h3>
+                <p><%= t(:create_customized_plan_description) %></p>
             </div>
         </div>
-
-        <div class="feature_item ">
+        <div class="feature_item">
             <div class="bottom_left">
-                <h3>インスピレーションガイド</h3>
-                <p>目的地とテンプレートを選択して、おすすめスポットの提案をします。</p>
+                <h3><%= t(:inspiration_guide_title) %></h3>
+                <p><%= t(:inspiration_guide_description) %></p>
             </div>
         </div>
     </section>
-</main> 
