--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,20 +1,20 @@
 <main class="container_auth">
   <div class="auth-form">
     <ul class="form-title-link">
-      <li><h2>新規登録</h2></li>
-      <li><%= link_to "ログイン", new_user_session_path %></li>
+      <li><h2><%= t(:signup) %></h2></li>
+      <li><%= link_to t(:login), new_user_session_path %></li>
     </ul>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
       <div class="field">
-        <%= f.label :nickname, "ユーザー名" %>
+        <%= f.label :nickname, t(:username) %>
         <%= f.text_field :nickname, class: 'form-control' %>
       </div>
 
       <div class="field">
-        <%= f.label :email, "メールアドレス" %>
+        <%= f.label :email, t(:email) %>
         <% resource.errors.full_messages.each do |message| %>
-          <% if message.include?("メールアドレス") %>
+          <% if message.include?(t(:email)) %>
             <div class="error-message"><%= message %></div>
           <% end %>
         <% end %>
@@ -22,9 +22,9 @@
       </div>
 
       <div class="field">
-        <%= f.label :password, "パスワード　6文字以上" %>
+        <%= f.label :password, t(:password) + t(:password_length) %>
         <% resource.errors.full_messages.each do |message| %>
-          <% if message.include?("パスワード") && !message.include?("confirmation") %>
+          <% if message.include?(t(:password)) && !message.include?("confirmation") %>
           <div class="error-message"><%= message %></div>
           <% end %>
         <% end %>
@@ -32,10 +32,10 @@
       </div>
 
       <div class="field">
-        <%= f.label :password_confirmation, "パスワード　確認用" %>
+        <%= f.label :password_confirmation, t(:password_confirmation) %>
         <% resource.errors.full_messages.each do |message| %>
           <% if message.include?("confirmation") %>
-          <div class="error-message">確認用パスワードを正しく入力してください</div>
+          <div class="error-message"><%= t(:password_confirmation_error) %></div>
           <% end %>
         <% end %>        
         <%= f.password_field :password_confirmation, class: 'form-control', autocomplete: "new-password" %>
