--- a/app/views/layouts/_plan_input.html.erb
+++ b/app/views/layouts/_plan_input.html.erb
@@ -1,66 +1,64 @@
 <div class="plan-input">
-    <h2 class="cursor-pointer">旅のプランを入力</h2>
-    <%= form_with model: @plan, url:  open_ai_create_path, class: 'plan-input-form', remote: true do |form| %>
+  <h2 class="cursor-pointer"><%= t(:provide_your_travel_choice) %></h2>
+  <%= form_with model: @plan, url: open_ai_create_path, class: 'plan-input-form', remote: true do |form| %>
     <div class="form-group">
-        <%= form.label :destination, '目的地' %>
-        <%= form.text_field :destination, class: 'form-control', id: 'destination-input'%>
+      <%= form.label :destination, t(:destination) %>
+      <%= form.text_field :destination, class: 'form-control', id: 'destination-input' %>
+    </div>
+    <div class="form-group">
+      <%= form.label :place_to_visit, t(:place_to_visit) %>
+      <%= form.text_field :place_to_visit, class: 'form-control' %>
+    </div>
+    <div class="form-group">
+      <div class="slider-wrapper">
+        <%#= form.label :duration, t(:duration) %>
+        <%= form.range_field :duration, id: "day-slider", min: 1, max: 7, value: 1 %>
+        <span id="day-slider-value">1</span> 
+        <%= t(:days) %>
       </div>
-      <div class="form-group">
-        <%= form.label :place_to_visit, '行きたい場所' %>
-        <%= form.text_field :place_to_visit, class: 'form-control' %>
-      </div> 
-      <div class="form-group">
-        <!-- <%= form.label :duration, '日数' %> -->
-        <div class="slider-wrapper">
-          <%= form.range_field :duration, id: "day-slider", min: 1, max: 7, value: 1 %>
-          <span id="day-slider-value">1</span> 日間
-        </div>
+    </div>
+    <div class="form-group">
+      <%= form.check_box :budget_option, class: 'budget-option', id: 'budget-option' %>
+      <span class="cursor-pointer"><%= t(:budget_option) %></span>
+      <div id="budget-input">
+        <%= form.range_field :budget, id: "budget-slider", min: 0, max: 100000, step: 5000, value: 10000, oninput: "displayBudgetValue(this.value)" %>
+        <span id="budget-slider-value">10,000</span> <%= t(:currency) %>
       </div>
-      <div class="form-group">
-        <%= form.check_box :budget_option, class: 'budget-option', id: 'budget-option' %>
-          <span class="cursor-pointer">予算</span>
-        <div id="budget-input">
-          <%= form.range_field :budget, id: "budget-slider", min: 0, max: 100000, step: 5000, value: 10000, oninput: "displayBudgetValue(this.value)" %>
-          <span id="budget-slider-value">10,000</span> 円
-        </div>
-      </div>
-   
-      <div class="category-selector custom-category-selector">
-        <%= form.label :activity_id, "選択してください" %>
-        <div class="select-wrapper hidden">
-          <%= form.collection_check_boxes :activity_id, Activity.all, :id, :name, {}, {class: 'select-control'} do |b| %>
-            <div class="option-wrapper">
-              <%= b.check_box(class: 'option-check') %>
-              <%= b.label(class: 'option-label') do %>
-                <%= b.text %>
-              <% end %>
-            </div>
-          <% end %>
-        </div>
-      </div>
-      
-        
+    </div>
 
-      <div class="form-group">
-        <%= form.label :activity, 'アクティビティ' %>
-        <%= form.collection_select(:activity_id, Activity.all, :id, :name, {}, { class: "select-control", id: "activity" }) %>
+    <!-- <div class="category-selector custom-category-selector">
+      <%= form.label :activity_id, t(:activity_id) %>
+      <div class="select-wrapper hidden">
+        <%= form.collection_check_boxes :activity_id, Activity.all, :id, :name, {}, {class: 'select-control'} do |b| %>
+          <div class="option-wrapper">
+            <%= b.check_box(class: 'option-check') %>
+            <%= b.label(class: 'option-label') do %>
+              <%= b.text %>
+            <% end %>
+          </div>
+        <% end %>
       </div>
-      <div class="form-group">
-        <%= form.label :food, '食事' %>
-        <%= form.collection_select(:food_id, Food.all, :id, :name, {}, { class: "select-control", id: "food" }) %>
-      </div> 
-      <div class="form-group">
-        <%= form.label :travel_style, 'スタイル' %>
-        <%= form.collection_select(:travel_style_id, TravelStyle.all, :id, :name, {}, { class: "select-control", id: "travel_style" }) %>
-      </div>
-      <div class="form-group">
-        <%= form.label :accommodation, '宿泊タイプ' %>
-        <%= form.collection_select(:accommodation_id, Accommodation.all, :id, :name, {}, { class: "select-control", id: "accommodation" }) %>        
-      </div> 
-      <div class="form-group">
-        <%= form.label :transportation, '移動手段' %>
-        <%= form.collection_select(:transportation_id, Transportation.all, :id, :name, {}, { class: "select-control", id: "transportation" }) %>
-      </div> 
-      <%= form.submit 'プランを作成', class: 'submit-button hidden' %>
-    <% end %>
-  </div>
+    </div> -->
+    <div class="form-group">
+      <%= form.label :activity, t(:activity_id) %>
+      <%= form.collection_select(:activity_id, Activity.all, :id, :name, {}, { class: "select-control", id: "activity" }) %>
+    </div>
+    <div class="form-group">
+      <%= form.label :food_id, t(:food_id) %>
+      <%= form.collection_select(:food_id, Food.all, :id, :name, {}, { class: "select-control", id: "food" }) %>
+    </div>
+    <div class="form-group">
+      <%= form.label :travel_style_id, t(:travel_style_id) %>
+      <%= form.collection_select(:travel_style_id, TravelStyle.all, :id, :name, {}, { class: "select-control", id: "travel_style" }) %>
+    </div>
+    <div class="form-group">
+      <%= form.label :accommodation_id, t(:accommodation_id) %>
+      <%= form.collection_select(:accommodation_id, Accommodation.all, :id, :name, {}, { class: "select-control", id: "accommodation" }) %>
+    </div>
+    <div class="form-group">
+      <%= form.label :transportation_id, t(:transportation_id) %>
+      <%= form.collection_select(:transportation_id, Transportation.all, :id, :name, {}, { class: "select-control", id: "transportation" }) %>
+    </div>
+    <%= form.submit t(:create_button), class: 'submit-button hidden' %>
+  <% end %>
+</div>
