--- a/app/assets/stylesheets/_plan_input.scss
+++ b/app/assets/stylesheets/_plan_input.scss
@@ -69,7 +69,7 @@
 
     .submit-button {
       width: 200px;
-      margin: 0 auto;
+      margin: 30px auto;
       padding: 10px 20px;
       background-color: #2a9d8f;
       color: #fff;
