--- a/app/assets/stylesheets/darkmode.scss
+++ b/app/assets/stylesheets/darkmode.scss
@@ -65,7 +65,7 @@ body.dark-mode {
     border-bottom: 1px solid var(--background-border_style-dark-mode);
   }
   
-  body.dark-mode .header_top {
+  body.dark-mode .header-top {
     background-color: var(--background-color-dark-mode);
     color: var(--font-color-dark-mode);
   }
@@ -101,7 +101,7 @@ body.dark-mode {
     box-shadow: 0 0 0 3px rgba(233, 196, 106, 0.25);
   }
   
-  body.dark-mode .generated_plan_container {
+  body.dark-mode .generated-plan-container {
     border-right: var(--background-border_style-dark-mode);
   }
   
