--- a/app/views/layouts/_generated_plan.html.erb
+++ b/app/views/layouts/_generated_plan.html.erb
@@ -1,6 +1,6 @@
-<div class="generated_plan_container">
+<div class="generated-plan-container">
     <!-- loading_container hiddenクラスを外すのはbutton_fade.js -->
-    <div class="loading_container hidden"> 
+    <div class="loading-container hidden"> 
         <div class="loading">
             <img src="loading.gif" alt="Loading..." height="20">
         </div> 
