--- a/app/views/layouts/_right_side.html.erb
+++ b/app/views/layouts/_right_side.html.erb
@@ -1,5 +1,5 @@
-<div class="right_side_container">
-    <div class="map_container">
+<div class="right-side-container">
+    <div class="map-container">
         <div id="map"></div>
     </div>
 </div>
