--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,12 @@
   </head>
 
   <header class="header">
-    <div class="header_top">
-      <div class="header__logo">
+    <div class="header-top">
+      <div class="header-logo">
         <%= link_to "AI Travel Planner", top_path %>
       </div>
       <% if show_search_button? %>
-        <div class="header__search">
+        <div class="header-search">
           <%= form_with(url: open_ai_search_path, local: true, method: :get, class: "search-form") do |form| %>
             <div class="search-input-container">
               <%= form.text_field :keyword, placeholder: t(:search), class: "search-input" %>
@@ -56,7 +56,7 @@
     <div class="signup-form display">
       <%= render 'devise/registrations/new' %>
     </div>
-    <div class="header_bottom">
+    <div class="header-bottom">
       <nav class="category-nav">
         <ul>
           <li><%= link_to t(:create_plan), root_path %></li>
@@ -71,7 +71,7 @@
       <%= yield %>
     </div>
     <footer class="footer">
-      <div class="footer__copyright">
+      <div class="footer-copyright">
         &copy; AI Travel Planner. Powered by ChatGPT and Google Maps.
       </div>
     </footer>
