--- a/app/views/open_ai/index.html.erb
+++ b/app/views/open_ai/index.html.erb
@@ -1,5 +1,5 @@
 
-<main class="container_index">
+<main class="container-index">
     <%= render 'layouts/plan_input' %>
     <%= render 'layouts/generated_plan' %>
     <%= render 'layouts/right_side' %>
