--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -1,19 +1,19 @@
-<main class="container_about">
+<main class="container-about">
     <section class="feature">
-        <div class="feature_item">
-            <div class="upper_left">
+        <div class="feature-item">
+            <div class="upper-left">
                 <h3><%= t(:create_travel_plan_title) %></h3>
                 <p><%= t(:create_travel_plan_description) %></p>
             </div>
         </div>
-        <div class="feature_item">
-            <div class="middle_right">
+        <div class="feature-item">
+            <div class="middle-right">
                 <h3><%= t(:create_customized_plan_title) %></h3>
                 <p><%= t(:create_customized_plan_description) %></p>
             </div>
         </div>
-        <div class="feature_item">
-            <div class="bottom_left">
+        <div class="feature-item">
+            <div class="bottom-left">
                 <h3><%= t(:inspiration_guide_title) %></h3>
                 <p><%= t(:inspiration_guide_description) %></p>
             </div>
