--- a/app/assets/stylesheets/_right_side.scss
+++ b/app/assets/stylesheets/_right_side.scss
@@ -1,14 +1,15 @@
-.right_side_container {
+
+.right-side-container {
     width: 40%;
     position: relative;
     z-index: 0;
     
   }
 
-.map_container {
+.map-container {
   padding: 20px; /* 余白のサイズを指定 */
-  width: 520px;
-  height: 520px;
+  width: 90%;
+  height: 90%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +21,7 @@
   position: absolute;
   top: 30px;
   left: 30px;
-  height: 480px; /* 地図の高さを指定 */
+  height: 100%; /* 地図の高さを指定 */
   width: calc(100% - 40px); /* 幅を親要素から余白を差し引いた値に指定 */
   z-index: -1;
   border-radius: 10px;
