--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -1,4 +1,4 @@
-.container_about {
+.container-about {
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -14,12 +14,12 @@
   margin: 20px auto;
 }
 
-.feature_item {
+.feature-item {
   width: 100%;
   margin-bottom: 20px;
 }
 
-.upper_left {
+.upper-left {
   width: 100%;  
   padding-top: 50px;
   text-align: left;
@@ -37,7 +37,7 @@
   }
 }
 
-.middle_right {
+.middle-right {
   width: 100%;
   padding-top: 50px;
   text-align: center;
@@ -55,7 +55,7 @@
   }  
 }
 
-.bottom_left {
+.bottom-left {
   width: 100%;
   padding-top: 50px;
   text-align: right;
