--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<main class="container_auth">
+<main class="container-auth">
   <div class="auth-form">
     <ul class="form-title-link">
       <li><h2><%= t(:signup) %></h2></li>
